samples/_failures_safe/1761246598_e7c072_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9f70cea.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b9f70cea.c:161:9: error: expected declaration or statement at end of input
  161 |         }
      |         ^
./samples/SAFE/__tmp_b9f70cea.c:161:9: error: expected declaration or statement at end of input
